--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 .App {
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
+	text-align: center;
+	font-family: "Poppins", sans-serif;
+}
+
+.heading {
+	color: #000;
+	font-family: "Helvetica Neue", sans-serif;
+	font-size: 60px;
+	font-weight: bold;
+	letter-spacing: -1px;
+	line-height: 1;
+	text-align: center;
 }
