--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
 	font-family: "Poppins", sans-serif;
 }
 
+.center {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+}
+
 .heading {
 	color: #000;
 	font-family: "Helvetica Neue", sans-serif;
